// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Default renders correctly 1`] = `
<jest>
  <article
    class="ecl-card"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__body"
    >
      <ul
        class="ecl-card__label-container"
      >
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight ecl-card__label"
          >
            highlighted
          </span>
        </li>
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--medium ecl-card__label"
          >
            call status: upcoming
          </span>
        </li>
      </ul>
      <div
        class="ecl-card__meta"
      >
        <span
          class="ecl-card__meta-item"
        >
          META1
        </span>
        <span
          class="ecl-card__meta-item"
        >
          Meta2
        </span>
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <ul
        class="ecl-card__tag-container"
      >
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 1
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 2
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 3
          </a>
        </li>
      </ul>
    </div>
  </article>
</jest>
`;

exports[`Card Default renders correctly with extra attributes 1`] = `
<jest>
  <article
    class="ecl-card"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__body"
    >
      <ul
        class="ecl-card__label-container"
      >
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight ecl-card__label"
          >
            highlighted
          </span>
        </li>
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--medium ecl-card__label"
          >
            call status: upcoming
          </span>
        </li>
      </ul>
      <div
        class="ecl-card__meta"
      >
        <span
          class="ecl-card__meta-item"
        >
          META1
        </span>
        <span
          class="ecl-card__meta-item"
        >
          Meta2
        </span>
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <ul
        class="ecl-card__tag-container"
      >
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 1
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 2
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 3
          </a>
        </li>
      </ul>
    </div>
  </article>
</jest>
`;

exports[`Card Default renders correctly with extra class names 1`] = `
<jest>
  <article
    class="ecl-card custom-class custom-class--test"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__body"
    >
      <ul
        class="ecl-card__label-container"
      >
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight ecl-card__label"
          >
            highlighted
          </span>
        </li>
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--medium ecl-card__label"
          >
            call status: upcoming
          </span>
        </li>
      </ul>
      <div
        class="ecl-card__meta"
      >
        <span
          class="ecl-card__meta-item"
        >
          META1
        </span>
        <span
          class="ecl-card__meta-item"
        >
          Meta2
        </span>
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <ul
        class="ecl-card__tag-container"
      >
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 1
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 2
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 3
          </a>
        </li>
      </ul>
    </div>
  </article>
</jest>
`;

exports[`Card Default renders correctly with lists 1`] = `
<jest>
  <article
    class="ecl-card"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__body"
    >
      <ul
        class="ecl-card__label-container"
      >
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight ecl-card__label"
          >
            highlighted
          </span>
        </li>
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--medium ecl-card__label"
          >
            call status: upcoming
          </span>
        </li>
      </ul>
      <div
        class="ecl-card__meta"
      >
        <span
          class="ecl-card__meta-item"
        >
          META1
        </span>
        <span
          class="ecl-card__meta-item"
        >
          Meta2
        </span>
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <dl
        class="ecl-description-list ecl-description-list--horizontal ecl-card__list"
      >
        <dt
          class="ecl-description-list__term"
        >
          EU contribution
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          1.000.000,00 euro (100% of the overall budget)
        </dd>
        <dt
          class="ecl-description-list__term"
        >
          Taxonomy list
        </dt>
        <dd
          class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
        >
          <span
            class="ecl-description-list__definition-item"
          >
            Taxonomy item 1
          </span>
          <span
            class="ecl-description-list__definition-item"
          >
            Taxonomy item 2
          </span>
          <span
            class="ecl-description-list__definition-item"
          >
            Taxonomy item 3
          </span>
        </dd>
      </dl>
    </div>
  </article>
</jest>
`;
